src/test/ui/issues/issue-46186.stderr
error: expected item, found `;`
  --> $DIR/issue-46186.rs:13:2
   |
LL | }; //~ ERROR expected item, found `;`
   |  ^ expected item

error: aborting due to previous error

